--- a/adhvagafrontend/src/Components/Home/HomePage.css
+++ b/adhvagafrontend/src/Components/Home/HomePage.css
@@ -5,9 +5,10 @@
 /* HERO */
 .hero {
   position: relative;
-  height: 90vh;
+  height: 100vh;
   display: flex;
   align-items: center;
+  justify-content: end;
   color: white;
 }
 
@@ -32,6 +33,9 @@
 
 .hero-content {
   position: relative;
+  display: flex;
+  flex-direction: column;
+    
   max-width: 900px;
   padding: 0 5%;
 }
@@ -55,6 +59,7 @@
   display: flex;
   gap: 1.2rem;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
 .btn-primary {
