--- a/adhvagafrontend/src/Components/Home/HomePage.css
+++ b/adhvagafrontend/src/Components/Home/HomePage.css
@@ -61,6 +61,13 @@
   flex-wrap: wrap;
   justify-content: center;
 }
+.hero-buttons a {
+  text-decoration: none;
+}
+.feature-grid a{
+  text-decoration: none;
+  color: inherit;
+}
 
 .btn-primary {
   background: #facc15;
